RESOLVED FIXED277084
[WebGPU] Prevent discard_fragment from being optimized incorrectly
https://bugs.webkit.org/show_bug.cgi?id=277084
Summary [WebGPU] Prevent discard_fragment from being optimized incorrectly
Mike Wyrzykowski
Reported 2024-07-25 10:04:09 PDT
[WebGPU] Prevent discard_fragment from being optimized incorrectly
Attachments
Mike Wyrzykowski
Comment 1 2024-07-25 10:04:36 PDT
Mike Wyrzykowski
Comment 2 2024-07-25 10:06:56 PDT
EWS
Comment 3 2024-07-25 15:50:57 PDT
Committed 281372@main (1ff284504546): <https://commits.webkit.org/281372@main> Reviewed commits have been landed. Closing PR #31232 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.