[WebGPU] Prevent discard_fragment from being optimized incorrectly https://bugs.webkit.org/show_bug.cgi?id=277084 rdar://131948643

Reviewed by Tadeu Zagallo.

Presumably the IR is correct since iOS and Apple Silicon Macs have
correct behavior.

Workaround is only needed on Intel and AMD chips.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):

Canonical link: https://commits.webkit.org/281372@main